Fixed a bug where next-key locking doesn't allow the insert which does not produce phantom (bug #9354).